# sleeptime_r

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md  notes
src/: main.rs
